# lightfsm

./: .clang-format  CMakeLists.txt  LICENSE  README.md  lightfsm-config.cmake.in  package.xml  plugin_description.xml
.github/workflows/: continuous_integration.yaml
cmake/: read_version.cmake
examples/: CMakeLists.txt  simple_fsm_example.cpp
include/lightfsm/: actions.h  event.h  guard.h  meta_state.h  state.h  state_machine.h  state_machine_basic_executor.h  state_machine_executor.h  transition.h  triggered_event.h
include/lightfsm_ros/: state_machine_ros_executor.h
scripts/: sbc15_fsm_viewer.bash
src/: action.cpp  event.cpp  global.cpp  global.h  guard.cpp  sbc15_fsm.py  state.cpp  state_machine.cpp  state_machine_basic_executor.cpp  state_machine_node.cpp  transition.cpp  triggered_event.cpp
src/examples/: CMakeLists.txt  approach_object_example.cpp  find_cup_example.cpp  map_exploration_example.cpp  pick_up_cup_example.cpp  pick_up_example.cpp  place_cup_example.cpp  simple_fsm_example.cpp
src/fsm/: action.cpp  action.h  actions.cpp  actions.h  event.cpp  event.h  guard.cpp  guard.h  meta_state.cpp  meta_state.h  state.cpp  state.h  state_machine.cpp  state_machine.h  state_machine_basic_executor.cpp  state_machine_basic_executor.h  state_machine_executor.cpp  state_machine_executor.h  transition.cpp  transition.h  triggered_event.cpp  triggered_event.h
src/fsm_ros/: state_machine_ros_executor.cpp  state_machine_ros_executor.h
src/lightfsm/: actions.cpp  meta_state.cpp  state_machine_executor.cpp
src/lightfsm_ros/: state_machine_ros_executor.cpp
src/rviz/: exploration_control.cpp  exploration_control.h
src/states/: approach_object.cpp  approach_object.h  back_up.cpp  back_up.h  deliver_object.cpp  deliver_object.h  explore.cpp  explore.h  explore_map.cpp  explore_map.h  fetch_object.cpp  fetch_object.h  follow_path.cpp  follow_path.h  global_state.cpp  global_state.h  go_to_base.cpp  go_to_base.h  goto_object.cpp  goto_object.h  gripper_state.cpp  gripper_state.h  moveit_motion.cpp  moveit_motion.h  pickup_object.cpp  pickup_object.h  place_cup.cpp  place_cup.h  place_object.cpp  place_object.h  plan_arm_motion.cpp  plan_arm_motion.h  position_to_base.cpp  position_to_base.h  preplanned_state.cpp  preplanned_state.h  recorded_trajectory.cpp  recorded_trajectory.h  rest_to_pre_position.cpp  rest_to_pre_position.h  (+10 more)
src/tests/: CMakeLists.txt  action_test.cpp  approach_object_test.cpp  blocked_station_test.cpp  drive_away_from_obstacles_test.cpp  drive_to_wall_test.cpp  event_test.cpp  find_cup_test.cpp  give_cube_test.cpp  map_exploration_test.cpp  meta_state_test.cpp  one_iteration_test.cpp  pick_up_cup_test.cpp  pickup.cpp  position_to_target_test.cpp  sick10_test.cpp  sign_exploration_test.cpp  take_cube_test.cpp
src/utils/: map_explorer.cpp  map_explorer.h  sign_explorer.cpp  sign_explorer.h
tests/: .gitignore  CMakeLists.txt  action_test.cpp  coverage.sh  event_test.cpp  meta_state_test.cpp  multiple_event_test.cpp
