<?xml version="1.0"?>
<package format="2">
  <name>lightfsm</name>
  <version>1.0.0</version>
  <description>Yet another lightweight C++ finite state machine framework</description>

  <maintainer email="sebastian.buck@uni-tuebingen.de">buck</maintainer>

  <license>BSD</license>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
